# dama

./: .gitignore  LICENSE  README.md  dama.cabal  stack.yaml
app/: Main.hs
src/: Main.hs
src/Dama/: AST.hs  Annotator.hs  CharX.hs  Core.hs  CoreMaker.hs  CoreRenderer.hs  Error.hs  Lexer.hs  Location.hs  Parser.hs  Token.hs
src/Dama/Core/: Core.hs  Gen.hs  Render.hs
src/Dama/Fixity/: IR.hs  Resolve.hs
src/Dama/Lexer/: Lexer.hs  Token.hs
src/Dama/Parser/: AST.hs  Parser.hs
