name:                dama
version:             0.0.0.0
license-file:        LICENSE
author:              Daniel Smith
maintainer:          danielspencersmith@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable dama
  main-is:             Main.hs
  build-depends:       base ==4.9.*
                     , mtl ==2.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
