name:                dama
version:             0.0.0.0
license-file:        LICENSE
author:              Daniel Smith
maintainer:          danielspencersmith@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Dama.Annotator, Dama.Core.Core, Dama.Core.Gen, Dama.Core.Render, Dama.Error, Dama.Fixity.IR,
    Dama.Fixity.Resolve, Dama.Lexer.Lexer, Dama.Lexer.Token, Dama.Location, Dama.Parser.AST,
    Dama.Parser.Parser
  build-depends:       base ==4.9.*
                     , containers ==0.5.*
                     , mtl ==2.2.*
                     , transformers ==0.5.*
  default-language:    Haskell2010
  default-extensions:  LambdaCase

executable dama
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base ==4.9.*
                     , dama ==0.0.*
  default-language:    Haskell2010
  default-extensions:  LambdaCase
